--- a/wp-content/themes/mobig-child/assets/css/_site-settings.scss
+++ b/wp-content/themes/mobig-child/assets/css/_site-settings.scss
@@ -42,7 +42,7 @@ $col1: #FE5B6B;
 $col2: #E8BE46;
 $col3: #6B6B6B;
 $col4: #A3A2A2;
-$col5: #F7F7F7;
+$col5: #EEEDED;
 $col6: #D45A6A;
 
 $col7: #76777a;
