--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -135,7 +135,8 @@
     }
   }
   @media all and (min-width: 768px) {
-    columns: 2; -webkit-columns: 2; -moz-columns: 2;
+    // columns: 2; -webkit-columns: 2; -moz-columns: 2;
+    column-count: 2;
   }
 }
 .listFilterGalerry {
@@ -174,5 +175,108 @@
     & p {
       text-align: center; margin: 0; padding: 0;
     }
+  }
+}
+
+// Portabilidad
+.contentControlsStep {
+  width: 100%; height: auto; padding: 0; margin: 0; position: relative; @include box-sizing(border-box);
+  &__list {
+    list-style-type: none; @include displayFlex(flex, row, flex-start, null, wrap); padding: 0; margin: 0;
+  }
+  &__item {
+    list-style-type: none; flex: 0 0 auto; width: 33.33333333%; @include box-sizing(border-box); padding: 0; margin: 0; position: relative; overflow: hidden;
+    & img {
+      display: block; width: 35px; height: auto; padding: 0; margin: 0 auto 10px; position: relative; z-index: 2; @include transition(all 300ms ease); opacity: 0.65;
+      &.stepActive {
+        opacity: 1.0;
+      }
+    }
+    & p {
+      text-align: center; @include fluid-type(10px, 15px, 320px, 1200px); color: $col3;
+    }
+    &:before,
+    &:after {
+      content: ''; width: 50%; height: 1px; background-color: rgba($col3, 0.40); z-index: 1; @include position(absolute, 20px null null null); 
+    }
+    &:before {
+      left: calc(0% - 20px);
+    }
+    &:after {
+      right: calc(0% - 20px);
+    }
+    @media all and (min-width: 640px) {
+      & img {
+        width: 50px;
+      }
+      &:before {
+        left: calc(0% - 30px); top: 25px;
+      }
+      &:after {
+        right: calc(0% - 30px); top: 25px;
+      }
+    }
+    @media all and (min-width: 768px) {
+      & img {
+        width: 60px;
+      }
+      &:before {
+        left: calc(0% - 35px); top: 32px;
+      }
+      &:after {
+        right: calc(0% - 35px); top: 32px;
+      }
+    }
+  }
+}
+
+// Steps Procesos
+.contentGralStep {
+  width: 100%; height: auto; padding: 20px 15px; margin: 0; position: relative; background-color: $white; @include box-sizing(border-box); border: 1px solid rgba($col3, 0.45); border-radius: 10px; box-shadow: 0 4px 10px rgba($black, 0.25); display: none;
+  .contentGralStep__btn {
+    width: 100%; height: auto; padding: 0; margin: 0; position: relative; @include box-sizing(border-box); text-align: center;
+  }
+  &.active {
+    display: block;
+  }
+}
+.step1 {
+  h3 {
+    color: $col1; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(18px, 30px, 320px, 1200px);
+  }
+  .descStep {
+    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(13px, 16px, 320px, 1200px);
+  }
+  .descStepSmall {
+    color: $col3; margin: 0 0 10px; padding: 0; line-height: 1.2; text-align: left; font-family: $regular;
+  }
+}
+.step2 {
+  h3 {
+    color: $col1; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(18px, 30px, 320px, 1200px);
+  }
+  .descStep {
+    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(13px, 16px, 320px, 1200px);
+    strong {
+      color: $col1;
+    }
+  }
+  .descStepSmall {
+    color: $col3; margin: 0 0 10px; padding: 0; line-height: 1.2; text-align: left; font-family: $regular;
+  }
+}
+.msj-result2 {
+  width: 100%; height: auto; padding: 0; margin: 0; position: relative; background-color: $white; @include box-sizing(border-box);
+  & h4 {
+    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(15px, 18px, 320px, 1200px);
+    & strong {
+      font-family: $semibold; color: $col1;
+    }
+  }
+  & img {
+    width: 100%; max-width: 200px; height: auto; padding: 0; margin: 0 auto 10px; display: block;
+  }
+  &__btn {
+    text-align: center; width: 100%; height: auto; padding: 0; margin: 0 0 30px;
   }
 }
