--- a/wp-content/themes/mobig-child/assets/css/modules/buttons.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/buttons.scss
@@ -60,6 +60,12 @@
         background-color: $col2; border-color: $col2; color: $white;
       }
     }
+    &--pink-outline {
+      background-color: transparent; border: 2px solid $col1; color: $white;
+      &:hover {
+        background-color: $col1; border-color: $col1; color: $white;
+      }
+    }
     &--pink {
       background-color: $col1; color: $white; border: 2px solid $col1;
       &:hover, &:focus {
