--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -244,11 +244,14 @@
   h3 {
     color: $col1; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(18px, 30px, 320px, 1200px);
   }
-  .descStep {
+  & .descStep {
     color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(13px, 16px, 320px, 1200px);
   }
-  .descStepSmall {
+  & .descStepSmall {
     color: $col3; margin: 0 0 10px; padding: 0; line-height: 1.2; text-align: left; font-family: $regular;
+  }
+  & .msg-inpIMEI {
+    color: $col1!important; font-size: rem(13px)!important;
   }
 }
 .step2 {
