--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -848,3 +848,107 @@ article.maps {
 .process-sec {
   width: 100%; height: auto; padding: 60px 0; margin: 0; @include box-sizing(border-box); background-color: $col5;
 }
+
+// Roaming
+.pospagoTar-sec {
+  width: 100%; height: 300px; @include position(relative, null null null null); padding: 0; margin: 0; background-position: -450px; background-repeat: no-repeat; background-size: cover; overflow: hidden; background-color: $white;
+  & .pospagoCT {
+    z-index: 3; @include position(absolute, 50% null null 0); @include transform(translateY(-50%)); width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+    &__box {
+      width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+      & h3 {
+        color: $col1; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(18px, 30px, 320px, 1200px); text-transform: uppercase;
+      }
+      & p {
+        color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(13px, 18px, 320px, 1200px);
+        & strong {
+          font-family: $extrabold; color: $col3;
+        }
+      }
+      @media all and (min-width: 768px) {
+        & h3 {
+          text-align: right;
+        }
+        & p {
+          text-align: right;
+        }
+      }
+    }
+    &__btn {
+      width: 100%; height: auto; padding:0 ; margin: 0; position: relative; @include box-sizing(border-box); text-align: center;
+      @media all and (min-width: 768px) {
+        text-align: right;
+      }
+    }
+  }
+  & .circleBen {
+    @include position(absolute, 50% -170px null null); @include transform(translateY(-50%)); display: block; width: 100%; max-width: 200px; height: auto; padding: 0; margin: 0; z-index: 2;
+  }
+  @media all and (min-width: 576px) {
+    height: 350px;
+  }
+  @media all and (min-width: 768px) {
+    background-position: -160px; height: 400px; background-size: contain;
+  }
+  @media all and (min-width: 992px) {
+    background-position: -70px; height: 460px;
+  }
+  @media all and (min-width: 1024px) {
+    background-position: -50px;
+  }
+  @media all and (min-width: 1200px) {
+    background-position: left;
+  }
+}
+
+// prepagoCT
+.prepagoTar-sec {
+  width: 100%; height: 300px; @include position(relative, null null null null); padding: 0; margin: 0; background-position: 800px; background-repeat: no-repeat; background-size: cover; overflow: hidden; background-color: $white;
+  & .prepagoCT {
+    z-index: 3; @include position(absolute, 50% null null 0); @include transform(translateY(-50%)); width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+    &__box {
+      width: 100%; height: auto; padding: 0; margin: 0; @include box-sizing(border-box);
+      & h3 {
+        color: $col1; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(18px, 30px, 320px, 1200px); text-transform: uppercase;
+      }
+      & p {
+        color: $col3; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $regular; @include fluid-type(13px, 18px, 320px, 1200px);
+        & strong {
+          font-family: $extrabold; color: $col3;
+        }
+      }
+      @media all and (min-width: 768px) {
+        & h3 {
+          text-align: left;
+        }
+        & p {
+          text-align: left;
+        }
+      }
+    }
+    &__btn {
+      width: 100%; height: auto; padding:0 ; margin: 0; position: relative; @include box-sizing(border-box); text-align: center;
+      @media all and (min-width: 768px) {
+        text-align: left;
+      }
+    }
+  }
+  & .circleBen {
+    @include position(absolute, 50% -170px null null); @include transform(translateY(-50%)); display: block; width: 100%; max-width: 200px; height: auto; padding: 0; margin: 0; z-index: 2;
+  }
+  @media all and (min-width: 576px) {
+    height: 350px;
+  }
+  @media all and (min-width: 768px) {
+    background-position: right; height: 400px; background-size: contain;
+  }
+  @media all and (min-width: 992px) {
+    height: 460px;
+  }
+  @media all and (min-width: 1024px) {
+    // background-position: -50px;
+  }
+  @media all and (min-width: 1200px) {
+    background-position: right;
+  }
+}
