--- a/wp-content/themes/mobig-child/assets/css/layout/_header.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_header.scss
@@ -168,32 +168,38 @@
     ul {
       list-style-type: none; @include displayFlex(flex, column, center, center, nowrap); margin: 10px auto; padding: 0 0; width: 300px;
       li {
-        list-style-type: none; width: 100%; height: auto; border-bottom: 1px solid rgba($white, 0.15);
+        list-style-type: none; width: 100%; height: auto; border-bottom: 1px solid rgba($white, 0.15); position: relative;
         a {
           display: block; color: $white; text-transform: uppercase; width: 100%; height: 40px; line-height: 40px; background-color: rgba(255,255,255,0.0); text-align: left; @include transition(all 0.25s ease); text-decoration: none; font-family: $medium; font-size: rem(18px);
           &:hover {
             background-color: rgba(255,255,255,0.10);
           }
         }
-        &.secondary-menu {
-          position: relative;
-          &:after {
-            content: '\f0d7'; font-family: 'fontAwesome'; width: 15px; height: 15px; font-size: rem(13px); @include position(absolute, 50% 5px null null); text-align: center; line-height: 15px; @include transform(translateY(-50%)); color: $col2;
-          }
-        }
         & > .sub-menu {
           display: none;
           li {
             a {
-              color: $c3; margin: 0 0 0 0; padding: 0; font-size: rem(14px);
+              color: $white; margin: 0 0 0 0; padding: 0 0 0 10px; font-size: rem(14px); @include box-sizing(border-box);
               img {
                 width: 25px; height: auto;
               }
             }
           }
+          &.current {
+            display: block;
+          }
         }
         &:last-child {
           border-bottom: none;
+        }
+        &.secondary-menu,
+        &.menu-item-has-children {
+          & > a {
+            position: relative;
+            &:after {
+              content: '\f0d7'; font-family: 'fontAwesome'; width: 15px; height: 15px; font-size: rem(13px); @include position(absolute, 50% 5px null null); text-align: center; line-height: 15px; @include transform(translateY(-50%)); color: $col2;
+            }
+          }
         }
       }
     }
