Ajsutes de fqas

--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -136,7 +136,7 @@
   }
   @media all and (min-width: 768px) {
     // columns: 2; -webkit-columns: 2; -moz-columns: 2;
-    column-count: 2;
+    // column-count: 2;
   }
 }
 .listFilterGalerry {
